--- a/styles/style.css
+++ b/styles/style.css
@@ -27,6 +27,21 @@ body {
   border: 2px solid var(--color-primary);
 }
 
+.section-title {
+  text-align: center;
+  font-size: 35px;
+  font-weight: 700;
+  color: #181818;
+  margin-bottom: 10px;
+}
+
+.section-description {
+  text-align: center;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 35px;
+}
+
 /* Header and Nav */
 
 header {
@@ -107,4 +122,36 @@ nav > ul a {
   margin: 12px 0;
   display: flex;
   gap: 12px;
+}
+
+/* Main Section */
+main {
+  padding: 80px 120px;
+}
+
+/* About ME */
+.about-me {
+  padding: 130px;
+  background-color: #fff8f3;
+  margin-bottom: 80px;
+}
+
+.about-me-info {
+  display: flex;
+  padding-top: 30px;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.info-title {
+  color: #757575;
+  text-align: center;
+  font-size: 20px;
+  margin-bottom: 6px;
+}
+
+.info-desc {
+  color: #474747;
+  font-size: 20px;
+  font-weight: 700;
 }
